--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Portfolio - Webflow HTML website template</title>
-    <meta content="Portfolio - Webflow HTML website template" property="og:title">
+    <title>Portfolio -Webflow HTML website template</title>
+    <meta content="Portfolio -Webflow HTML website template" property="og:title">
     <meta
         content="https://assets.website-files.com/5c6e6f46bf98b2013cf621c5/5cdbf62c56d6dd3315e2b16b_Portfolio%20SEO.jpg"
         property="og:image">
@@ -16,7 +16,7 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"
         media="all">
-    <script type="text/javascript">WebFont.load({ google: { families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"] } });
+    <script type="text/javascript">WebFont.load({ google:{ families:["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"] } });
     </script>
     <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
     <script type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);
@@ -28,11 +28,8 @@
 </head>
 
 <body>
+   <header class="header_bg">
     <div data-collapse="medium" data-animation="default" data-duration="400" class="navigation w-nav">
-        <div >
-            doesnt s
-        </div>
- 
         <div class="navigation-items">
             <a href="/" class="logo-link w-nav-brand w--current">
                 <img src="https://assets.website-files.com/5c6e6f46bf98b2013cf621c5/5c6e7f27bf98b2c4a5f64eb7_portfolio-logo%402x.png"
@@ -75,6 +72,9 @@
             </div>
         </div>
     </div>
+</header>
+    
+</section>>
     <div class="section">
         <div id="works-grid" class="w-layout-grid works-grid">
             <div id="w-node-8f65c72d8fa5-b6f621c6">
