--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
 <body>
     <!-- loader -->
     <div class="loader_bg">
-        <div class="word">LOADING_SITHEMBISO_Portfolio...</div>
+        <div class="word">LOADING_SITHEMBISO_Portfolio....</div>
         <div class="overlay"></div>
       </div>
+      <!-- Header -->
    <header class="header_bg">
     <div data-collapse="medium" data-animation="default" data-duration="400" class="navigation w-nav"id="myHeader">
         <div class="navigation-items">
